Add paid token reviews API
